templates/k3d-gitlab/cluster-types/mgmt/components/atlantis/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: atlantis
  namespace: atlantis
  annotations:
    argocd.argoproj.io/sync-wave: '20'
spec:
  routes:
    - kind: Rule
      match: Host(`atlantis.<DOMAIN_NAME>`)
      services:
        - name: atlantis
          port: 80
  tls:
    secretName: atlantis-tls
